@@ -8102,3 +8102,6 @@ EPRINTS-3.1-beta-2
 2009-03-26 tdb
  * Share fields between inbox/buffer/archive/deletion (stored in eprint)
 
+2009-03-27 tdb
+ * Fixed to_string() calls not specifying noxmlns in Views (McSweeney)
+
